# Zero-Trust-Cloud-IAM-Auditor

./: .gitignore  README.md  iam-auditor  main.py  pyproject.toml  requirements.txt
final_reports/: scan.md
iolayer/parsers/: __init__.py  aws_policy_parser.py
iolayer/reporters/: __init__.py  json_reporter.py  markdown_reporter.py
src/: __init__.py
src/core/: __init__.py  engine.py  models.py
src/rules/: __init__.py
tests/: __init__.py  generate_reports_from_examples.py  test_engine_mvp.py
